<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapInventory</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="add_done">Add/Done</string>
    <string name="next">Next</string>
    <string name="receive">Receive</string>
    <string name="update">Update</string>
    <string name="updatefragment_tag">updatefragment_tag</string>
    <string name="newdistributorfragment_tag">newdistfragment_tag</string>
    <string name="addEditProductfragment_tag">addEditProductfragment_tag</string>
    <string name="mainmenufragment_tag">mainmenu_fragment_tag</string>
    <string name="distributorpaymentfragment_tag">distributorpayment_fragment</string>
    <string name="add_distributor">Add/Edit Distributor</string>
    <string name="distributor_order_fragment">distributor_order_tag</string>
    <string name="order_information_tag">order_information_tag</string>
    <string name="order_receive_fragment_tag">order_receive_tag</string>
    <string name="purchase_order_receive_confirm_tag">purchase_order_receive_confirm_tag</string>
    <string name="agency_name">Agency Name</string>
    <string name="salesman_name">Salesman Name</string>
    <string name="company_name">CompanyName</string>
    <string name="city">City</string>
    <string name="total_distributors">Total Distributors</string>
    <string name="total_due">Total Due</string>
    <string name="phonenumber_hint">Type Name or Number</string>
    <string name="total_paid">Total Paid :</string>
    <string name="distributor_name_hint">Distributor Name</string>
    <string name="distributor_number_hint">Distributor Mobile Number</string>
    <string name="distributor_address_hint">Distributor Address</string>
    <string name="save">Save</string>
    <string name="payments">Payments</string>
    <string name="address">Address</string>
    <string name="cash_payment">Cash Payment :</string>
    <string name="pincode">Pincode</string>
    <string name="tin_number">TIN Number</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="phone_number">Phone Number</string>
    <string name="distributor">Distributor</string>
    <string name="company">Company</string>
    <string name="filter_distributor_column">agency_name</string>
    <string name="filter_company_column">company_name</string>
    <string name="add_new">Add New</string>
    <string name="my_store">My Store</string>
    <string name="product">Product</string>
    <string name="product_code">Code No.</string>
    <string name="mrp">MRP</string>
    <string name="offer">Offer</string>
    <string name="sales_price">Sales Price</string>
    <string name="sales_price_two">Sales Price2</string>
    <string name="sales_price_three">Sales Price3</string>
    <string name="stock_qty">In Stock Qty</string>
    <string name="received_date">Received Date</string>
    <string name="vat_rate">VAT Rate</string>
    <string name="vat_amount">VAT Amt</string>
    <string name="unit_type">Unit Type</string>
    <string name="report">Report</string>
    <string name="tag">Tag</string>
    <string name="expiry">Expiry</string>
    <string name="header_product">Product</string>
    <string name="in_stock">In Stock</string>
    <string name="ordered_qty">Ordered</string>
    <string name="pending_order">Pending Qty</string>
    <string name="to_order">To Order</string>
    <string name="billed_qty">Billed Qty</string>
    <string name="received_qty">Received Qty</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="discount">Discount</string>
    <string name="net_amount">Net Amt</string>
    <string name="total">Total</string>
    <string name="sku_highest_margin">SKU/Cat\nHighest Margin</string>
    <string name="weekly_trend">Weekly Trend</string>
    <string name="scheme_type">Scheme Type</string>
    <string name="scheme_value">Scheme Value</string>
    <string name="validity_period">Validity Period</string>
    <string name="trade_marketing">Trade Marketing</string>
    <string name="stock_order_total_category_stock">Total Category Stock: </string>
    <string name="distributor_product_name">Product Name</string>
    <string name="batches">Batches</string>
    <string name="distributor_product_quantity">Quantity</string>
    <string name="distributor_product_price">Price</string>
    <string name="product_order_confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="distributor_payment">Distributors</string>
    <string name="stock">Stock</string>
    <string name="current">Current</string>
    <string name="key_position_array_adapter">0</string>
    <string name="stock_sku">Stock Sku\'s</string>
    <string name="pending_purchase_order">Pending Order</string>
    <string name="key_child_view">4</string>
    <string name="key_group_view">5</string>
    <string name="brand">Brand</string>
    <string name="category">Entire Category</string>
    <string name="dashboard">Dashboard</string>
    <string name="stock_value">Total Stock Value</string>
    <string name="monthly_sales">Avg. Monthly Sales</string>
    <string name="monthly_profit">Avg. Monthly Profit</string>
    <string name="total_skus">Total Skus </string>
    <string name="total_new_skus">New Skus</string>
    <string name="paid_stock">Paid Stock</string>
    <string name="unpaid_stock">Un-Paid Stock</string>
    <string name="avg_visits_pm">Avg. Visits Per Month</string>
    <string name="avg_purchase_pm">Avg. Purchase Per Month</string>
    <string name="days_since_last_purchase">Days Since Last Purchase</string>
    <string name="payments_history">Payments History</string>
    <string name="days_of_stock">Days of Stock</string>
    <string name="dashboardfragment_tag">dashboard_fragment</string>
    <string name="summary_tag">summary_tag</string>
    <string name="charts_tag">charts_tag</string>
    <string name="alerts_tag">alerts_tag</string>
    <string name="stock_report_tag">stock_report_tag</string>
    <string name="money_tag">money_tag</string>
    <string name="calc_tag">calc_tag</string>
    <string name="summary">Summary</string>
    <string name="charts">Charts</string>
    <string name="alerts">Alerts</string>
    <string name="stock_report">Stock Report</string>
    <string name="calc">Calculator</string>
    <string name="po_date">PO Date</string>
    <string name="po_number">PO Number</string>
    <string name="po_amount">Amount</string>
    <string name="purchase">Purchase</string>
    <string name="payment">Payment</string>
    <string name="serial_no">Serial No</string>
    <string name="po_mode">Mode</string>
    <string name="cheque_no">Cheque No</string>
    <string name="store_level">Store Level</string>
    <string name="total_value">Total Value</string>
    <string name="total_no_of_qty">Total No. of Qty</string>
    <string name="average_daily_sales">Average Daily Sales</string>
    <string name="stock_summary">Stock Summary</string>
    <string name="payment_history">Payments and History</string>
    <string name="edit">Edit</string>
    <string name="revenue">Revenue</string>
    <string name="profit">Profit</string>
    <string name="payment_done">Done   </string>
    <string name="payment_delete">Delete   </string>
    <string name="lowstock">Low Stock</string>
    <string name="outstock">Out of Stock</string>
    <string name="slowstock">Slow Stock</string>
    <string name="expiredstock">Expired Stock</string>
    <string name="expiringstock">Expiring Stock</string>
    <string name="money">Money</string>
    <string name="excess">Excess</string>
    <string name="shortage">Shortage</string>
    <string name="global_products">Global Products</string>
    <string name="step1">1. Distrbutors</string>
    <string name="step2">2. Company</string>
    <string name="step3">3. Brands</string>
    <string name="step">Step</string>
    <string name="local_distributor">Local Distributors</string>
    <string name="enter_invoice">Enter Invoice</string>
    <string name="multiple_brands">Multiple Brands</string>
    <string name="total_category_stock">Total Category Stock: </string>
    <string name="line_items">Line Items</string>
    <string name="salesman">Salesman</string>
    <string name="sku_report">SKU Report</string>
    <string name="barcode_small">barcode length small</string>
    <string name="exit_app">Do you want to exit?</string>
    <string name="exit_receive">exit receive?</string>
    <string name="exit_order">exit order?</string>
    <string name="order_successful">Order placed successfully</string>
    <string name="change_order_qty">Kindly change the order quantity</string>
    <string name="increase_order_qty">Increased to order qty by 1</string>
    <string name="purchase_order_success">Purchase order updated successfully</string>
    <string name="receive_order_success">Received product(s) successfully</string>
    <string name="alert_invoice_no">Invoice Number Cannot be empty</string>
    <string name="msg_capture_image">Unable to capture image</string>
    <string name="msg_image_processed">Image could not be processed</string>
    <string name="increase_bill_qty">Increased Billed qty by 1</string>
    <string name="msg_update_changes">Do you want to update the changes?</string>
    <string name="receive_bill_qty">Receive quantity cannot be zero</string>
    <string name="msg_brand_creation">Brand creation failed</string>
    <string name="msg_tag_brand">Please tag atleast 1 brand</string>
    <string name="msg_valid_brand">Please enter a valid brand name</string>
    <string name="msg_brand_name">Please enter the brand name</string>
    <string name="msg_valid_company">Please enter a valid company name</string>
    <string name="msg_select_company">Please Select a Company</string>
    <string name="msg_confirm_delete">Confirm Delete?</string>
    <string name="msg_dist_agency_name">Please Enter a Distributor Agency Name</string>
    <string name="msg_dist_salesman_name">Please enter the correct salesman name</string>
    <string name="msg_valid_city">Please enter the correct city name</string>
    <string name="msg_valid_pin">Please enter the correct PIN number</string>
    <string name="msg_valid_phone">Please enter the correct phone number</string>
    <string name="search_products">Search</string>

    <string-array name="payment_mode">
        <item>Cash</item>
        <item>Cheque</item>
        <item>Credit Note</item>
    </string-array>

    <string name="qty">Qty</string>
    <string name="date">Date</string>
    <string name="bill_amnt">Amt.</string>
    <string name="qty_sold">Qty. Sold</string>
    <string name="opening_stock">Opening Stock</string>
    <string name="closing_stock">Closing Stock</string>
    <string name="wrapper_tag">wrapper_tag</string>

</resources>