<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/actionbar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:visibility="gone" >

        <com.snapbizz.snaptoolkit.customviews.SoftInputEditText
            android:id="@+id/search_edittext"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/clear_search_text_button"
            android:ems="10" />

        <Button
            android:id="@+id/clear_search_text_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_cancel_red_small" />
    </RelativeLayout>

    <TextView
        android:id="@+id/actionbar_header"
        style="@style/actionbar_headertextstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/search_layout"
        android:text="@string/add_distributor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar_header"
        android:layout_toLeftOf="@id/search_layout"
        android:gravity="center"
        android:visibility="invisible"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/step_header"
            style="@style/actionbar_headertextstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/step1_header"
            style="@style/actionbar_headertextstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_padding"
            android:text="@string/step1"
            android:textColor="@drawable/step_textcolor_selector"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/step2_header"
            style="@style/actionbar_headertextstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_padding"
            android:text="@string/step2"
            android:textColor="@drawable/step_textcolor_selector"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/step3_header"
            style="@style/actionbar_headertextstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium_padding"
            android:text="@string/step3"
            android:textColor="@drawable/step_textcolor_selector"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>